--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
@@ -228,6 +228,9 @@
     <ClInclude Include="include\DUOLGameEngine\Export_Engine.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\MeshCollider.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -414,6 +417,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLGameEngine\Util\UUID.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\MeshCollider.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
