--- a/DUOLEditor/DUOLEditor.vcxproj.filters
+++ b/DUOLEditor/DUOLEditor.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClInclude Include="include\DUOLEditor\UI\Widgets\Layout\SameLine.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLEditor\UI\Widgets\Selections\ListBox.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLEditor\Editor.cpp">
@@ -486,6 +489,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLEditor\UI\Widgets\Layout\SameLine.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLEditor\UI\Widgets\Selections\ListBox.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
